# Ifabot-ROS

./: README.md
ifabot_base/: CMakeLists.txt  package.xml
ifabot_base/config/: control.yaml
ifabot_base/include/ifabot_base/: ifabot_hardware.h
ifabot_base/launch/: base.launch
ifabot_base/src/: ifabot_base.cpp  ifabot_hardware.cpp
ifabot_control/: CMakeLists.txt~  package.xml
ifabot_control/launch/: teleop.launch
ifabot_description/: CMakeLists.txt  package.xml
ifabot_description/launch/: description.launch
ifabot_description/meshes/: hokuyo_scanner.stl  ifabot_base.stl  ifabot_wheel.stl  ultrasonic_sensor.stl
ifabot_description/urdf/: ifabot.urdf.xarco
ifabot_navigation/: CMakeLists.txt  package.xml
ifabot_navigation/launch/: amcl.launch  gmapping.launch
imu_board_driver/: CMakeLists.txt  README.md  package.xml
imu_board_driver/cfg/: dynamic_reconfigurable_parameter.cfg
imu_board_driver/src/: IMUBoardDriver.cpp
imu_board_driver/srv/: Calibrate.srv
robot_board_driver/: CMakeLists.txt  README.md  package.xml
robot_board_driver/cfg/: dynamic_reconfigurable_parameter.cfg  dynamic_reconfigurable_parameter.cfg~
robot_board_driver/src/: RobotBoardDriver.cpp  RobotBoardDriver.cpp~
