<?xml version="1.0"?>
<package>
  <name>ifabot_control</name>
  <version>1.0.0</version>
  <description>The ifabot_control package</description>

  <maintainer email="Dimitri.Henkel@mailbox.tu-dresden.de">Dimitri Henkel</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>