<?xml version="1.0"?>
<package>
  <name>robot_board_driver</name>
  <version>1.0.0</version>
  <description>The robot_board_driver package. Used to communicate with the IfAbot Robot Board.</description>

  <maintainer email="Dimitri.Henkel@mailbox.tu-dresden.de">Dimitri Henkel</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>  
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export></export>
</package>